infra/k8s/caddy-h3-service-nodeport.yaml
# Caddy HTTP/3 service (NodePort). Use when METALLB_ENABLED=0. TCP 30443, UDP 30444 (k3s: split nodePorts).
# k3d: publish both nodePorts TCP/UDP (see scripts/k3d-create-2-node-cluster.sh).
apiVersion: v1
kind: Service
metadata:
  name: caddy-h3
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: caddy-h3
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
    nodePort: 30443
  - name: https-udp
    port: 443
    targetPort: 443
    protocol: UDP
    nodePort: 30444
  - name: grpc-h2c
    port: 5000
    targetPort: 5000
    protocol: TCP
  - name: admin
    port: 2019
    targetPort: 2019
    protocol: TCP
